Update on About page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portrait" src="/img/daniel-profile.jpeg">
+            <p>This site was created by Daniel Galiziani. It uses data from mapbox.com and weatherstack.com</p>
+            <img class="portrait" src="/img/foto-daniel.jpg">
         </div>
         {{>footer}}
     </body>
